@@ -241,14 +241,21 @@ Although not required, using the Perl module is recommended.</blockquote>
 <h3><b>v1.2beta</b> <b>- ?? ??, 2006</b></h3>
 <ul>
   <li>Added logging of trap statistics to a SQL table.  Added <b>*table_statistics</b>
-  <b>snmptt.ini</b> variables to define the table to be used.</li>
+  <b>snmptt.ini</b> variable to define the table to be used.</li>
   <li>Added ability to add custom columns to <b>*_table</b> and <b>*_table_unknown</b>
   tables.  Added <b>sql_custom_columns</b> and <b>sql_custom_columns_unknown</b> <b>snmptt.ini</b> options.</li>
   <li>Added a <b>$H</b> variable substitution to give the host name of the computer that is running 
   SNMPTT, or a user defined value specified in the new <b>snmptt_system_name</b> <b>snmptt.ini</b> option.</li>
-  <li>Fixed a bug (1438794) where snmpttconvertmib would not translate a TRAP-TYPE / NOTIFICATION-TYPE line if 
-  it was split across two lines.</li>
   <li>Fixed a bug in MATCH where the i modifier was not handled correctly.</li>
+  <li>SNMPTTConvertMIB:</li>
+  <li style="list-style: none">
+  <ul>
+    <li>Fixed a bug (1438794) where a TRAP-TYPE / NOTIFICATION-TYPE line would not translate if 
+    it was split across two lines.</li>
+    <li>Fixed a bug (1438394) where ARGUMENTS lines that have $1, $2 etc instead of %0, %1 would
+    not translate.  Thanks to Todd A. Green.</li>
+  </ul>
+  </li>
 </ul>
 
 
